fix: fix service_time_machine CSS issue where images in the mosaic portal were displayed too large

--- a/core/services/service_time_machine/css/service_time_machine.less
+++ b/core/services/service_time_machine/css/service_time_machine.less
@@ -117,10 +117,6 @@
 
 				}
 
-				&:has(.component_image) {
-					padding: 1px;
-				}
-
 				.component_text_area {
 
 					img {
